# Be-Humming

./: .gitignore  README.md  pyproject.toml  requirements.txt
be_humming/: main.py
be_humming/mods/: hybrid_perceptual.py  jpeg_binary_search.py  lossless.py  perceptual.py
be_humming/utils/: image_ops.py  logging.py  metrics.py  reporting.py  shell.py
